--- a/master.css
+++ b/master.css
@@ -1,5 +1,6 @@
 :root {
     --themecolor: #6f9fc7;
+    --code-bg: #183055;
 }
 
 * {
@@ -11,10 +12,10 @@
 }
 
 body {
-    top: 0;
     position: relative;
+    top: 0;
+    background: var(--basic-bg);
     text-align: center;
-    background-color: var(--basic-bg);
 }
 
 .ad {
@@ -25,7 +26,7 @@ body {
 .ad a {
     display: block;
     height: 50px;
-    background-color: var(--themecolor);
+    background: var(--themecolor);
     color: white;
 }
 
@@ -45,7 +46,7 @@ a {
 }
 
 .ad div:hover {
-    background-color: rgba(255, 255, 255, .2);
+    background: rgba(255, 255, 255, .2);
 }
 
 .nav {
@@ -54,7 +55,7 @@ a {
     z-index: 99;
     height: 50px;
     box-shadow: 0 0 2px rgba(0, 0, 0, .2);
-    background-color: var(--premium-bg);
+    background: var(--premium-bg);
     line-height: 50px;
 }
 
@@ -65,7 +66,7 @@ a {
 }
 
 .nav div:hover {
-    background-color: var(--chosen);
+    background: var(--chosen);
 }
 
 .nav .switch-theme {
@@ -77,13 +78,8 @@ a {
 }
 
 .main-contain {
+    position: relative;
     padding: 30px 24%;
-}
-
-@media screen and (max-width: 800px) {
-    .main-contain {
-        padding: 24px 5% 30px;
-    }
 }
 
 .main-contain::before {
@@ -93,16 +89,41 @@ a {
     content: "";
     display: block;
     z-index: -1;
-    opacity: .05;
+    opacity: .1;
     width: 100%;
     height: 100%;
     background: right center/contain no-repeat;
     background-image: var(--bg-pic);
 }
 
+@media screen and (max-width: 800px) {
+    .main-contain {
+        padding: 24px 5% 30px;
+    }
+
+    .main-contain::before {
+        top: -15%;
+        right: -55%;
+        width: 250%;
+        height: 150%;
+    }
+}
+
+#search-box {
+    position: fixed;
+    top: 45px;
+    right: 15px;
+    z-index: 101;
+    display: none;
+    background: var(--premium-bg);
+    border-radius: 4px;
+    padding: 15px 20px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+}
+
 .article {
-    text-align: left;
     margin-bottom: 48px;
+    text-align: left;
 }
 
 .article h2 {
@@ -124,12 +145,12 @@ a {
 }
 
 .article .body {
-    line-height: 26px;
     margin-bottom: 16px;
-    width: 100%;
-    height: 52px;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: 100%;
+    height: 52px;
+    line-height: 26px;
 }
 
 .article .time::before {
@@ -143,9 +164,9 @@ a {
 .article .time,
 .article .class {
     float: left;
-    line-height: 32px;
     filter: grayscale(1);
     margin-right: 20px;
+    line-height: 32px;
 }
 
 .copyright {
@@ -160,7 +181,7 @@ a {
     width: 50px;
     height: 50px;
     border-radius: 25px;
-    line-height: 50px;
-    background-color: var(--premium-bg);
+    background: var(--premium-bg);
     box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+    line-height: 50px;
 }
