--- a/articles/master-for-body.css
+++ b/articles/master-for-body.css
@@ -15,15 +15,15 @@
 
 .article .body {
     overflow: visible;
-    text-overflow: clip;
     height: auto;
 }
 
-.body p {
+.article .body p {
+    display: block;
     text-indent: 2em;
 }
 
-.body blockquote {
+.article .body blockquote {
     position: relative;
     overflow: hidden;
     background: var(--premium-bg);
@@ -33,11 +33,11 @@
     box-shadow: 0 0 2px rgba(0, 0, 0, .1);
 }
 
-.body blockquote p {
+.article .body blockquote p {
     text-indent: 0;
 }
 
-.body blockquote p::before {
+.article .body blockquote p::before {
     position: absolute;
     left: 0;
     top: 0;
@@ -47,7 +47,7 @@
     background: var(--themecolor);
 }
 
-.body code {
+.article .body code {
     background: var(--premium-bg);
     border-radius: 4px;
     box-shadow: 0 0 2px rgba(0, 0, 0, .1);
@@ -55,14 +55,14 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-.body pre {
+.article .body pre {
     background: var(--code-bg);
     border-radius: 8px;
     margin: 10px 0;
     padding: 15px 30px;
 }
 
-.body pre code {
+.article .body pre code {
     background: transparent;
     box-shadow: none;
     padding: 0;
