--- a/master.css
+++ b/master.css
@@ -190,6 +190,26 @@ a {
     animation: get-down 1s ease-in-out;
 }
 
+#search-contain {
+    padding: 4px 8px;
+    border: none;
+    border-radius: 4px 0 0 4px;
+    box-shadow: 0 0 1px rgba(0, 0, 0, .2) inset;
+    background: var(--basic-bg);
+}
+
+#search-submit {
+    padding: 4px 8px;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    background: var(--themecolor);
+    color: #ffffff;
+}
+
+#search-submit:hover {
+    filter: brightness(90%);
+}
+
 .article {
     margin-bottom: 48px;
     text-align: left;
@@ -197,11 +217,12 @@ a {
 
 .article h2 {
     display: inline-block;
-    border-bottom: 2px solid var(--guide-line);
     margin-bottom: 16px;
+    padding: 8px 0;
+    border-bottom: 2px solid var(--guide-line);
     font-weight: normal;
     font-size: 26px;
-    line-height: 52px;
+    line-height: 36px;
 }
 
 .article .title {
@@ -274,7 +295,7 @@ a {
     }
 
     #main-contain::after {
-        right: -75%;
+        right: -80%;
         width: 300%;
     }
 }
